tests/reject/then.alg
prop push(x).then(pop).ret = x;
